--- a/assets/css/user-page.css
+++ b/assets/css/user-page.css
@@ -144,7 +144,7 @@
   }
 }
 .hide-feed, .hide {
-  display: none;
+  display: none !important;
   & button {
   }
 }
